Atualização do projeto com implementação da Escala de Militares

--- a/client/index.html
+++ b/client/index.html
@@ -31,6 +31,9 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
+    
+    <!-- Script para verificação de conexão WebSocket -->
+    <script src="/ws-checker.js"></script>
   </head>
   <body>
     <div id="root"></div>
